crates/glyim-typeck/test_data/compile-fail/cycle_projection.g
// test-mode: compile-fail
// error-pattern: cycle detected
fn main() {
    let _: <Self as A>::B = 0;
}
